# ask-your-csv-data

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.py
data/raw/: ASK DATA - superstore_data.csv
src/agents/: graph.py  nodes.py
src/experiments/: eda.py
src/models/: answer.py  query.py  router.py  selector.py  visualization.py
src/prompts/: manager.py
src/prompts/templates/: analyzer_prompt.md  answer_planner_prompt.md  router_prompt.md  schema_selector_prompt.md  visualization_planner_prompt.md
src/utils/: chart_builder.py  chat_handler.py  data_loader.py  evaluator.py  query_engine.py  schema_catalog.py  semantic_cache.py  ui.py  visualization.py
tests/: evaluation_summary.json  semantic_cache.index  semantic_cache.json  test_cases.json
