[project]
name = "test-1-ask-the-data"
version = "1.0.0"
description = "Test 1 - Ask The Data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
    "tiktoken>=0.13.0",
]
